5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1585_1446.log
== TEST (2019-03-21 11:57:47) 
-- CODE:
nA = float(input("Litros de polpas compradas"))



print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x,2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:58:03) 
-- CODE:
nA = float(input("Litros de polpas compradas"))



print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x,2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 11:59:07) 
-- CODE:
nA = float(input("Litros de polpas compradas"))



print(round(x,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(round(x,2))
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:29:01) 
-- CODE:
var = float(input("Litros de polpas compradas"))
total (var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total (var)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:30:56) 
-- CODE:
var = float(input("Litros de polpas"))
doacao = (2/3 * var)

total = (var - doacao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    total (var)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-25 12:31:28) 
-- CODE:
var = float(input("Litros de polpas"))
doacao = (2/3 * var)

total = (var - doacao)

print(round(total, 3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-25 12:31:41) 
-- CODE:
var = float(input("Litros de polpas"))
doacao = (2/3 * var)

total = (var - doacao)

print(round(total, 3))
-- EXECUTION TIME:
0.124785
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
